--- a/05-recipe-card/style.css
+++ b/05-recipe-card/style.css
@@ -33,3 +33,9 @@
 .wp-block-gutenberg-examples-example-05-recipe-card ul {
 	padding-left: 2.5em !important; /* Needs fix in Gutenberg. */
 }
+
+.wp-block-gutenberg-examples-example-05-recipe-card:after { 
+	content:""; 
+	clear:both; 
+	display: table; 
+}
